8193353: javapackager is totally broken in "-createbss" mode
Reviewed-by: kcr